--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,17 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "lucide-react": "^0.548.0",
     "react": "^19.1.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
-    "swr": "^2.3.6"
+    "sweetalert2": "^11.26.3",
+    "swiper": "^12.0.3",
+    "swr": "^2.3.6",
+    "typed.js": "^2.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
