--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,11 @@
     "react": "^19.1.1",
     "react-countup": "^6.5.3",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.3.0",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
     "swr": "^2.3.6",
