--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.9.4",
     "recharts": "^3.3.0",
     "sweetalert2": "^11.26.3",
