--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.5.0",
     "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.9.4",
+    "react-select": "^5.10.2",
     "recharts": "^3.3.0",
     "sweetalert2": "^11.26.3",
     "swiper": "^12.0.3",
