--- a/backend/package.json
+++ b/backend/package.json
@@ -29,8 +29,7 @@
     "mongoose": "^8.19.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
-    "multer-s3": "^3.0.1",
-    "razorpay": "^2.9.6"
+    "multer-s3": "^3.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
