--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-i18next": "^16.3.5",
     "react-icons": "^5.5.0",
     "react-razorpay": "^3.0.1",
     "react-router-dom": "^7.9.4",
